Migrate tests to JUnit 5 (#1830)
* Migrate tests to JUnit 5
* Use Amazon Corretto JDK 11